--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Enter your Phone Number to Unlock</h1>
         <form method="POST" action="/">
-            <input type="text" name="code" placeholder="Enter Code" required>
+            <input type="text" name="code" placeholder="+1" required>
             <button type="submit">Submit</button>
         </form>
         {% if error %}
